--- a/css/style.css
+++ b/css/style.css
@@ -137,21 +137,25 @@ section h3:hover {
 
 @media (max-width: 600px) {
   .search-section {
+    display: flex;
+  /* align-items: center;
+  justify-content: center;
+    flex-wrap: wrap; */
     flex-direction: column;
     align-items: stretch;
-    padding: 0.5rem 0.2rem;
+    padding: 0rem 0rem;
   }
   .search-bar-text {
     font-size: 1.1rem;
-    margin: 0.5rem 0.2rem;
+    margin: 0rem 0rem;
     text-align: center;
   }
   .search-bar {
-    width: 100%;
+    width: 80%;
     min-width: 0;
     max-width: 98vw;
     font-size: 0.98rem;
-    margin: 0.5rem 0.2rem;
+    margin: 0rem 0rem;
     height: 28px;
   }
 }
